--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title:  tracks.cute
 
 <div class="singlecolumn">
 <h2>tracks.cute</h2>
-<img src="/images/tracks-icon.png" width="200px" style="display: block; margin-left: auto; margin-right: auto; border:none;" />
+<img src="images/tracks-icon.png" width="200px" style="display: block; margin-left: auto; margin-right: auto; border:none;" />
 </div>
 
 
