fix stylesheet and links once and for all

--- a/index.html
+++ b/index.html
@@ -7,21 +7,24 @@ title:  tracks.cute
 
 <div class="singlecolumn">
 <h2>tracks.cute</h2>
-<img src="/tracks.cute/images/tracks-icon.png" width="200px" style="display: block; margin-left: auto; margin-right: auto; border:none;" />
+<img src="images/tracks-icon.png" width="200px" style="display: block; margin-left: auto; margin-right: auto; border:none;" />
 </div>
 
 
 <div class="singlecolumn">
 <h2>What is it?</h2>
 
-<p>Tracks.cute is a (partial) reimplementation of Tracks in Python and Qt.</p>
+<p>Tracks.cute is a (partial) reimplementation of Tracks in Python and Qt.
+</p>
 
-<p>Quoting <a href="http://getontracks.org">getontracks.org</a>:</p>
+<p>Quoting <a href="http://getontracks.org">getontracks.org</a>:
+</p>
 
 <blockquote>Tracks is a web-based application to help you implement David Allen’s Getting Things Done™ methodology. It was built using Ruby on Rails, and comes with a built-in webserver (WEBrick), so that you can run it on your own computer if you like. It can be run on any platform on which Ruby can be installed, including Mac OS X, Windows XP and Linux. Tracks is Open Source, free and licensed under the GNU GPL.
 </blockquote>
 
-<p>I like Tracks but wanted a version that wasn't a web app. Here is a pretty picture:</p>
+<p>I like Tracks but wanted a version that wasn't a web app. Here is a pretty picture:
+</p>
 
 <p class="center">
 <img src="http://imgur.com/2CFZe.png" alt="" title="Hosted by imgur.com" width="80%"/>
@@ -36,13 +39,12 @@ title:  tracks.cute
 </p>
 <blockquote>git clone git://github.com/SteveG/tracks.cute.git
 </blockquote>
-<p>There are several dependencies. These are: 
+<p>There are several dependencies. These are: </p>
 <ul>
 <li>Python 2.6 or 2.7
 <li>PyQT 4.6 or 4.7
 </ul>
-</p>
-<p>It is also current assumed that you will have an existing tracks database, in sqlite format. 
+<p>It is also currently assumed that you will have an existing tracks database, in sqlite format. 
 </p>
 </div>
 
