--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title:  tracks.cute
 
 
 <div class="singlecolumn">
-<h2>What is it?</h2>
+<h2>what is it?</h2>
 
 <p>Tracks.cute is a (partial) reimplementation of Tracks in Python and Qt.
 </p>
@@ -34,7 +34,7 @@ title:  tracks.cute
 
 
 <div class="singlecolumn">
-<h2>How do I get it?</h2>
+<h2>how do I get it?</h2>
 <p>Current there are no packaged releases of tracks.cute. The current source code can be retrieved using the following command.
 </p>
 <blockquote>git clone git://github.com/SteveG/tracks.cute.git
@@ -49,7 +49,7 @@ title:  tracks.cute
 </div>
 
 <div class="singlecolumn">
-<h2>How do I use it?</h2>
+<h2>how do I use it?</h2>
 <p>
 <b>WARNING: tracks.cute is pre-pre-alpha software, use at your own risk<br><br></b>
 </p>
