fix link to image

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@ title:  tracks.cute
 </p>
 
 <p class="center">
+<a href="http://imgur.com/2CFZe.png" title="Hosted by imgur.com">
 <img src="http://imgur.com/2CFZe.png" alt="" title="Hosted by imgur.com" width="80%"/>
+</a>
 </p>
 
 </div>
