updated description from getontracks

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@ title:  tracks.cute
 <p>Quoting <a href="http://getontracks.org">getontracks.org</a>:
 </p>
 
-<blockquote>Tracks is a web-based application to help you implement David Allen’s Getting Things Done™ methodology. It was built using Ruby on Rails, and comes with a built-in webserver (WEBrick), so that you can run it on your own computer if you like. It can be run on any platform on which Ruby can be installed, including Mac OS X, Windows XP and Linux. Tracks is Open Source, free and licensed under the GNU GPL.
+<blockquote>
+<p>Tracks is a web-based application to help you implement David Allen’s Getting Things Done™ methodology.</p>
+<p>Screenshot of context listThe main page shows all your actions sorted by context, but you can also view pages showing just the actions in one context (for when you want to focus on your office tasks, email or errands), or just the actions in one project.</p>
+<p>A form on the main page lets you add actions to any context or project, whereas forms on context and project pages automatically assign the current context or project to the new next action.</p>
+<p>Actions can have due dates. The ‘tickler’ allows you to schedule actions to be shown on the home page after some future date. This allows you to get the action out of your head into a concrete, safe system (where it belongs), but you don’t need to be bothered by the action until the time comes when you can actually deal with it.</p>
 </blockquote>
 
 <p>I like Tracks but wanted a version that wasn't a web app. Here is a pretty picture:
@@ -31,7 +35,7 @@ title:  tracks.cute
 <img src="http://imgur.com/2CFZe.png" alt="" title="Hosted by imgur.com" width="80%"/>
 </a>
 </p>
-
+<p><a href="https://github.com/SteveG/tracks.cute">Here</a> is the GitHub project page.</p>
 </div>
 
 
@@ -41,13 +45,13 @@ title:  tracks.cute
 </p>
 <blockquote>git clone git://github.com/SteveG/tracks.cute.git
 </blockquote>
-<p>There are several dependencies. These are: </p>
+<p>Tracks.cute uses: </p>
 <ul>
 <li>Python 2.7
 <li>PyQt 4.7
 </ul>
-<p>tracks.cute utilises the SQLite database from tracks. It should be able to open an existing tracks SQLite database file. 
-</p>
+<p>tracks.cute utilises the SQLite database from tracks. It should be able to open an existing tracks SQLite database file. </p>
+
 </div>
 
 <div class="singlecolumn">
