--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title:  tracks.cute
 
 <blockquote>
 <p>Tracks is a web-based application to help you implement David Allen’s Getting Things Done™ methodology.</p>
-<p>Screenshot of context listThe main page shows all your actions sorted by context, but you can also view pages showing just the actions in one context (for when you want to focus on your office tasks, email or errands), or just the actions in one project.</p>
+<p>The main page shows all your actions sorted by context, but you can also view pages showing just the actions in one context (for when you want to focus on your office tasks, email or errands), or just the actions in one project.</p>
 <p>A form on the main page lets you add actions to any context or project, whereas forms on context and project pages automatically assign the current context or project to the new next action.</p>
 <p>Actions can have due dates. The ‘tickler’ allows you to schedule actions to be shown on the home page after some future date. This allows you to get the action out of your head into a concrete, safe system (where it belongs), but you don’t need to be bothered by the action until the time comes when you can actually deal with it.</p>
 </blockquote>
