rename to tracks queue

--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 ---
 layout: base
-title:  tracks.cute
+title:  tracks queue
 ---
 
 <div class="clear"></div>
 
 <div class="singlecolumn">
-<h2>tracks.cute</h2>
-<img src="images/tracks-icon.png" width="200px" style="display: block; margin-left: auto; margin-right: auto; border:none;" />
+<h2>  </h2>
+<img src="images/tracks-icon.png" style="display: block; margin-left: auto; margin-right: auto; border:none;" />
 </div>
 
 
 <div class="singlecolumn">
 <h2>what is it?</h2>
 
-<p>Tracks.cute is a (partial) reimplementation of Tracks in Python and Qt.
+<p>Tracks queue is a (partial) reimplementation of Tracks in Python and Qt.
 </p>
 
 <p>Quoting <a href="http://getontracks.org">getontracks.org</a>:
@@ -35,37 +35,36 @@ title:  tracks.cute
 <img src="http://imgur.com/2CFZe.png" alt="" title="Hosted by imgur.com" width="80%"/>
 </a>
 </p>
-<p><a href="https://github.com/SteveG/tracks.cute">Here</a> is the GitHub project page.</p>
+<p><a href="https://github.com/SteveG/tracks-queue">Here</a> is the GitHub project page.</p>
 </div>
 
 
 <div class="singlecolumn">
 <h2>how do I get it?</h2>
-<p>There are no packaged releases of tracks.cute. The current source code can be retrieved using the following command.
+<p>There are no packaged releases of tracks queue. The current source code can be retrieved using the following command.
 </p>
-<blockquote>git clone git://github.com/SteveG/tracks.cute.git
+<blockquote>git clone git://github.com/SteveG/tracks-queue.git
 </blockquote>
-<p>Tracks.cute uses: </p>
+<p>Tracks queue uses: </p>
 <ul>
-<li>Python 2.7
-<li>PyQt 4.7
+<li>Python
+<li>PyQt
+<li>SQLite
 </ul>
-<p>tracks.cute utilises the SQLite database from tracks. It should be able to open an existing tracks SQLite database file. </p>
+<p>tracks queue utilises the SQLite database from tracks. It should be able to open an existing tracks SQLite database file. </p>
 
 </div>
 
 <div class="singlecolumn">
 <h2>how do I use it?</h2>
 <p>
-<b>WARNING: use of tracks.cute is at your own risk<br><br></b>
+<b>WARNING: use of tracks queue is at your own risk<br><br></b>
 </p>
-<p>Navigate to the src directory and execute tracks.py as follows:
+<p>Navigate to the src directory and execute tracks.py
 </p>
-<blockquote>./tracks.py
-</blockquote>
-<p>Tracks.cute will then ask you to select your database file. If you don't have an existing SQLite database file tracks.cute will create a new one using a template.
+<p>Tracks queue will then ask you to select your database file. If you don't have an existing SQLite database file tracks queue will create a new one using a template.
 </p>
-<p>Finally tracks.cute will ask you to nominate a user from within the database file.
+<p>Finally tracks queue will ask you to nominate a user from within the database file.
 </p>
 </div>
 
