--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@ title:  tracks queue
 <p>Actions can have due dates. The ‘tickler’ allows you to schedule actions to be shown on the home page after some future date. This allows you to get the action out of your head into a concrete, safe system (where it belongs), but you don’t need to be bothered by the action until the time comes when you can actually deal with it.</p>
 </blockquote>
 
-<p>I like Tracks but wanted a version that wasn't a web app. Here is a pretty picture:
+<p>I like Tracks but wanted a version that wasn't a web app.
 </p>
 
 <p class="center">
-<a href="http://imgur.com/2CFZe.png" title="Hosted by imgur.com">
-<img src="http://imgur.com/2CFZe.png" alt="" title="Hosted by imgur.com" width="80%"/>
+<a href="images/screenshot-tracks-queue.png" title="tracks queue screenshot">
+<img src="images/screenshot-tracks-queue.png" alt="" title="tracks queue screenshot" width="80%"/>
 </a>
 </p>
-<p><a href="https://github.com/SteveG/tracks-queue">Here</a> is the GitHub project page.</p>
+<p><a href="https://github.com/SteveG/tracks-queue">Here</a> is the GitHub project page where you can view the readme.</p>
 </div>
 
 
@@ -58,7 +58,7 @@ title:  tracks queue
 <div class="singlecolumn">
 <h2>how do I use it?</h2>
 <p>
-<b>WARNING: use of tracks queue is at your own risk<br><br></b>
+<b>WARNING: use of tracks queue is at your own risk. If using an existing database file please back it up first.<br><br></b>
 </p>
 <p>Navigate to the src directory and execute tracks.py
 </p>
